Informações de contato

--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
 </head>
 <body>
     <h1>Gustavo Andrade | Desenvolvedor Full-Stack</h1>
+    <div class="contato-info">
+        <p><strong>Email:</strong> <a href="mailto:gustavo.vc.andrade2005@gmail.com">gustavo.vc.andrade2005@gmail.com</a></p>
+        <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/gustavo-vc-andrade/">https://www.linkedin.com/in/gustavo-vc-andrade/</a></p>
+        <p><strong>Telefone:</strong> <a href="https://wa.me/5541991898333" target="_blank">(41) 99189-8333</a></p>
+    </div>
     <div class="botao-container">
         <a href="#Novidades" class="botao">Novidades</a>
         <a href="https://www.linkedin.com/in/gustavo-vc-andrade/" class="botao">Linkedin</a>
