--- a/index.html
+++ b/index.html
@@ -10,15 +10,14 @@
 </head>
 <body>
     <h1>Gustavo Andrade | Desenvolvedor Full-Stack</h1>
+     <div class = "contato-label">
+        <h2>Contato</h2>
+    </div>
     <div class="contato-info">
+
         <p><strong>Email:</strong> <a href="mailto:gustavo.vc.andrade2005@gmail.com">gustavo.vc.andrade2005@gmail.com</a></p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/gustavo-vc-andrade/">https://www.linkedin.com/in/gustavo-vc-andrade/</a></p>
         <p><strong>Telefone:</strong> <a href="https://wa.me/5541991898333" target="_blank">(41) 99189-8333</a></p>
-    </div>
-    <div class="botao-container">
-        <a href="#Novidades" class="botao">Novidades</a>
-        <a href="https://www.linkedin.com/in/gustavo-vc-andrade/" class="botao">Linkedin</a>
-        <a href="https://github.com/gustavoandrade18" class="botao">GitHub</a>
     </div>
     <div class = "container-label">
         <h2>Introdução</h2>
@@ -28,6 +27,12 @@
         <p>Sou um <strong> desenvolvedor Full-Stack</strong>, comecei no mundo da programação em 2021 utilizando C++ através do curso de <strong>desenvolvimento de jogos digitais no IFPR</strong>.
         <br>Desde então, venho me aperfeiçoando constantemente e adquirindo novos conhecimentos que me permitiram evoluir na área, desenvolvendo habilidades tanto em <strong>back-end</strong> quanto em <strong>front-end.</strong>
         <br>Atualmente estou cursando <strong>Ciência da Computação na PUCPR</strong>, buscando expandir meu conhecimento e domínio técnico e transformar ideias em soluções que agregam valor.</p>
+    </div>
+
+    <div class="botao-container">
+        <a href="#Novidades" class="botao">Novidades</a>
+        <a href="https://www.linkedin.com/in/gustavo-vc-andrade/" class="botao">Linkedin</a>
+        <a href="https://github.com/gustavoandrade18" class="botao">GitHub</a>
     </div>
 </body>
 </html>
