Fiz muitas mudanças no site

--- a/index.html
+++ b/index.html
@@ -9,18 +9,17 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <nav class="navbar">
+        <a href="#sobre">Sobre</a>
+        <a href="#projetos">Projetos</a>
+        <a href="#contato">Contato</a>
+    </nav>
     <h1>Gustavo Andrade | Desenvolvedor Full-Stack</h1>
-     <div class = "contato-label">
-        <h2>Contato</h2>
-    </div>
     <div class="contato-info">
 
         <p><strong>Email:</strong> <a href="mailto:gustavo.vc.andrade2005@gmail.com">gustavo.vc.andrade2005@gmail.com</a></p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/gustavo-vc-andrade/">https://www.linkedin.com/in/gustavo-vc-andrade/</a></p>
         <p><strong>Telefone:</strong> <a href="https://wa.me/5541991898333" target="_blank">(41) 99189-8333</a></p>
-    </div>
-    <div class = "container-label">
-        <h2>Introdução</h2>
     </div>
     <div class="container">
         <p id = "TituloIn"><strong>Oi, eu sou o Gustavo!</strong></p>
