Comecei a aba projetos

--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <nav class="navbar">
-        <a href="#sobre">Sobre</a>
+        <a href="#sobre">Sobre mim</a>
         <a href="#projetos">Projetos</a>
         <a href="#contato">Contato</a>
     </nav>
     <h1>Gustavo Andrade | Desenvolvedor Full-Stack</h1>
-    <div class="contato-info">
+    <div class="contato-info" id = "contato">
 
         <p><strong>Email:</strong> <a href="mailto:gustavo.vc.andrade2005@gmail.com">gustavo.vc.andrade2005@gmail.com</a></p>
         <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/gustavo-vc-andrade/">https://www.linkedin.com/in/gustavo-vc-andrade/</a></p>
         <p><strong>Telefone:</strong> <a href="https://wa.me/5541991898333" target="_blank">(41) 99189-8333</a></p>
     </div>
-    <div class="container">
+    <div class="container" id = "sobre">
         <p id = "TituloIn"><strong>Oi, eu sou o Gustavo!</strong></p>
         <p>Sou um <strong> desenvolvedor Full-Stack</strong>, comecei no mundo da programação em 2021 utilizando C++ através do curso de <strong>desenvolvimento de jogos digitais no IFPR</strong>.
         <br>Desde então, venho me aperfeiçoando constantemente e adquirindo novos conhecimentos que me permitiram evoluir na área, desenvolvendo habilidades tanto em <strong>back-end</strong> quanto em <strong>front-end.</strong>
@@ -29,7 +29,7 @@
     </div>
 
     <div class="botao-container">
-        <a href="#Novidades" class="botao">Novidades</a>
+        <a href="projetos.html" class="botao" id = "projetos">Projetos</a>
         <a href="https://www.linkedin.com/in/gustavo-vc-andrade/" class="botao">Linkedin</a>
         <a href="https://github.com/gustavoandrade18" class="botao">GitHub</a>
     </div>
