Adicionei mais projetos e melhorei algumas coisas

--- a/projetos.html
+++ b/projetos.html
@@ -16,31 +16,62 @@
             <p class="detalhes-texto">Clique para ver os detalhes</p>
             <div class="projeto-detalhes">
 
-                <p>Adaptação à Evolução é um jogo 2D desenvolvido com o propósito de explorar, de forma interativa e educativa, os conceitos da teoria da evolução biológica de Charles Darwin.
+                <p>Adaptação à Evolução foi um jogo 2D desenvolvido para meu TCC no curso de <strong>jogos digitais</strong>. O jogo tem o propósito de explorar, de forma interativa e educativa, os conceitos da teoria da evolução biológica de Charles Darwin.
                      O projeto combina mecânicas de gameplay baseadas em seleção natural, adaptação genética e estratégias alimentares, contextualizadas em diferentes períodos históricos da Terra.</p>
                 <p>A narrativa do jogo é estruturada em fases que representam eras geológicas reais, incluindo eventos como grandes extinções em massa, proporcionando um cenário dinâmico onde as criaturas precisam se adaptar para sobreviver.
                      O jogador é responsável por escolher os descendentes mais aptos, influenciando diretamente o processo evolutivo da espécie, o que gera uma experiência estratégica e científica ao mesmo tempo.</p>
                 <p>Desenvolvido na linguagem C# com o motor Unity, o projeto destaca-se pela integração de princípios biológicos com design de jogos, promovendo o aprendizado sobre evolução e ecologia através da interação lúdica. 
                     O jogo também enfatiza a variabilidade genética como fator essencial para a adaptação, oferecendo um sistema que simula mutações e seleção natural dentro do ambiente virtual.</p>
                 <p>Este trabalho reflete a aplicação prática de conhecimentos teóricos em um produto digital, demonstrando habilidades em programação, design de jogos, e comunicação científica.</p>
+
                 <p><strong>Link do projeto:</strong> <a href="https://github.com/gustavoandrade18/Adapta-o-Evolu-o-TCC">https://github.com/gustavoandrade18/Adapta-o-Evolu-o-TCC</a></p>
                 <p><strong>Link do jogo:</strong> <a href="https://drive.google.com/drive/folders/1m1G-etFpBcAoslPq1VJsH6P4PefrT70r?usp=drive_link">https://drive.google.com/drive/folders/1m1G-etFpBcAoslPq1VJsH6P4PefrT70r?usp=drive_link</a></p>
-                <img src="Imagens/projeto1/ganhou.png" alt="Imagem extra" />
-                <img src="Imagens/projeto1/corpos.png" alt="Imagem extra" />
+
+                <img src="Imagens/projeto1/ganhou.png" class="zoomable" alt="Imagem extra" />
+                <img src="Imagens/projeto1/corpos.png" class="zoomable" alt="Imagem extra" />
             </div>
         </div>
 
-        <div class="projeto-card"data-label="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa">
-        <img src="imagem2.jpg" alt="Projeto 2" />
-        <h3>Clique para ver os destalhes</h3>
-        <div class="projeto-detalhes">
-            <p>Descrição detalhada do Projeto 2.</p>
-            <img src="imagem2-extra.jpg" alt="Imagem extra" />
+        <div class="projeto-card"data-label="EcoTrip Curitiba - Processing">
+            <img src="Imagens/projeto2/telaInicial.png" alt="Projeto 2" />
+            <p class="detalhes-texto">Clique para ver os detalhes</p>
+            <div class="projeto-detalhes">
+                <p>EcoTrip Curitiba é um projeto visual interativo criado como parte de uma atividade acadêmica voltada à programação criativa.
+                    Desenvolvido na plataforma <strong>Processing</strong>, o projeto propõe uma experiência de guia turístico com foco ecológico, demonstrando como é possível explorar a cidade de Curitiba de forma consciente e respeitosa ao meio ambiente.</p>
+                <p>Através de gráficos gerados por código e interações simples com o usuário, o projeto apresenta pontos turísticos sustentáveis, incentivando práticas de turismo responsável.
+                    EcoTrip Curitiba une criatividade, código e educação ambiental em uma proposta acessível e visualmente envolvente.</p>
+
+                    <p><strong>Integrantes que participaram desse projeto: Gustavo Andrade, Alan Dlugosz, Geovana Estrela, Matheus, Rafael Engel</strong></p>
+
+                    <p><strong>Link do projeto:</strong> <a href="https://github.com/gustavoandrade18/Projeto2">https://github.com/gustavoandrade18/Projeto2</a></p>
+                <img src="Imagens/projeto2/telaOpcoes.png" class="zoomable" alt="Imagem extra" />
+                <img src="Imagens/projeto2/paginaInfo.png" class="zoomable" alt="Imagem extra" />
+            </div>
+        </div>
+
+        <div class="projeto-card" data-label="Do lixo ao LUXO">
+            <img src="Imagens/projeto3/Tela Inicial.png" alt="Imagem do jogo Adaptação à Evolução" />
+
+            <p class="detalhes-texto">Clique para ver os detalhes</p>
+            <div class="projeto-detalhes">
+                <p>Do Lixo ao LUXO é um projeto web colaborativo criado com o objetivo de informar e conscientizar o público sobre práticas sustentáveis, com foco na reciclagem de resíduos e na redução da poluição ambiental.
+                    O site apresenta conteúdos educativos, dicas práticas e orientações acessíveis para adotar um estilo de vida mais ecológico.</p>
+                <p>A ideia surgiu a partir da observação de um rio poluído na vizinhança de um dos integrantes, despertando o desejo de impactar positivamente a comunidade por meio da tecnologia. 
+                    Cada membro da equipe foi responsável por uma parte do site, incluindo estrutura, conteúdo e estilo visual, promovendo um trabalho em equipe bem distribuído e colaborativo.</p>
+                <p>O projeto foi desenvolvido em HTML, CSS e JavaScript, com atenção à estética, navegação e clareza das informações, e demonstra a capacidade da equipe de aplicar conhecimentos técnicos em um contexto social relevante.</p>
+            
+                <p><strong>Integrantes que participaram desse projeto: Alan Dlugosz, Geovana Estrela, Matheus, Gustavo Andrade, Rafael Engel, Pedro</strong></p>
+                <p><strong>Link do projeto:</strong> <a href="https://github.com/RafaelEngels/Projeto-3-Puc">https://github.com/RafaelEngels/Projeto-3-Puc</a></p>
+
+                <img src="Imagens/projeto3/depoimentos.png" class="zoomable" alt="Imagem extra" />
+            </div>
+
         </div>
     </div>
-
-  </div>
   <a href="index.html" class="back-button">Voltar para a página inicial</a>
+<div class="image-overlay" id="imageOverlay">
+  <img id="zoomedImage" src="" alt="Zoom">
+</div>
 <script src="scripts.js"></script>
 </body>
 </html>
